data/diff_tests/wasmtime/return_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3092.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
    "\00\02\7f\7f\02\8c\80\80\80\00\01\03\65\6e\76\04"
    "\66\75\6e\63\00\00\03\82\80\80\80\00\01\00\0a\8b"
    "\80\80\80\00\01\85\80\80\80\00\00\10\00\0f\0b"
  )
""
)